2008-05-04  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkkeys-quartz.c (maybe_update_keymap): Check if
	gdk_unicode_to_keyval() worked before using the result. Makes
	function keys work, bug #530156. Also add F16 to the function key
	map.

2008-05-04  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkkeys-quartz.c (maybe_update_keymap): Remove stray
	semicolon after if statement. Fixes bug #530963, patch from Yevgen
	Muntyan.

2008-05-02  Michael Natterer  <mitch@imendio.com>

	* gtk/gtk.h: add 15 files that were missing (they all got included
	indirectly by including gtk.h, so should have been here in the
	first place).

2008-05-02  Michael Natterer  <mitch@imendio.com>

	* modules/input/imthai.c: use GETTEXT_PACKAGE instead of "gtk20".

2008-05-01  Richard Hult  <richard@imendio.com>

	* gtk/gtkquartz.c (_gtk_quartz_set_selection_data_for_pasteboard):
	Prevent crash, fixes bug #530153. Patch from Yevgen Muntyan.

2008-05-01  Matthias Clasen  <mclasen@redhat.com>

	* modules/imput/imthai.c: Register the right translation domain.

2008-04-30  Matthias Clasen  <mclasen@redhat.com>

	Bug 529386 – Printing options hidden by blacklisted option

	* modules/printbackend/cups/gtkprintbackendcups.c
	(cups_printer_get_options): Fix the blacklist handling. 
	Patch by Marek Kašík.
	
2008-04-30  Richard Hult  <richard@imendio.com>

	* gdk/quartz/GdkQuartzView.c: Simplify check for zero sized expose
	area.

2008-04-30  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkevents-quartz.c: (_gdk_events_queue): Don't send
	nsevents with the gdk lock held, fixes deadlock when doing manual
	window resizing with threading enabled.

2008-04-30  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkevents-quartz.c:
	(get_keyboard_modifiers_from_ns_event), (create_key_event): Map
	Alt to Alt and Cmd to Meta. This is not only more logical but also
	makes it easier to have Mac-like behavior.

2008-04-25  Björn Lindqvist  <bjourne@gmail.com>
