@@ -17,7 +17,6 @@
  * Boston, MA 02111-1307, USA.
  */
 
-
 #ifndef __GTK_CELL_RENDERER_COMBO_H__
 #define __GTK_CELL_RENDERER_COMBO_H__
 
@@ -32,8 +31,8 @@ G_BEGIN_DECLS
 #define GTK_IS_CELL_RENDERER_COMBO(obj)		(G_TYPE_CHECK_INSTANCE_TYPE ((obj), GTK_TYPE_CELL_RENDERER_COMBO))
 #define GTK_IS_CELL_RENDERER_COMBO_CLASS(klass)	(G_TYPE_CHECK_CLASS_TYPE ((klass), GTK_TYPE_CELL_RENDERER_COMBO))
 #define GTK_CELL_RENDERER_COMBO_GET_CLASS(obj)   (G_TYPE_INSTANCE_GET_CLASS ((obj), GTK_TYPE_CELL_RENDERER_COMBO, GtkCellRendererTextClass))
-						 
-typedef struct _GtkCellRendererCombo GtkCellRendererCombo;
+
+typedef struct _GtkCellRendererCombo      GtkCellRendererCombo;
 typedef struct _GtkCellRendererComboClass GtkCellRendererComboClass;
 
 struct _GtkCellRendererCombo
@@ -43,7 +42,7 @@ struct _GtkCellRendererCombo
   GtkTreeModel *model;
   gint          text_column;
   gboolean      has_entry;
-  
+
   /*< private >*/
   guint         focus_out_id;
 };
@@ -58,4 +57,4 @@ GtkCellRenderer *gtk_cell_renderer_combo_new      (void);
 
 G_END_DECLS
 
-#endif
+#endif /* __GTK_CELL_RENDERER_COMBO_H__ */
