@@ -17,7 +17,6 @@
  * Boston, MA 02111-1307, USA.
  */
 
-
 #ifndef __GTK_CELL_RENDERER_SPIN_H__
 #define __GTK_CELL_RENDERER_SPIN_H__
 
@@ -31,9 +30,9 @@ G_BEGIN_DECLS
 #define GTK_IS_CELL_RENDERER_SPIN(obj)		(G_TYPE_CHECK_INSTANCE_TYPE ((obj), GTK_TYPE_CELL_RENDERER_SPIN))
 #define GTK_IS_CELL_RENDERER_SPIN_CLASS(klass)	(G_TYPE_CHECK_CLASS_TYPE ((klass), GTK_TYPE_CELL_RENDERER_SPIN))
 #define GTK_CELL_RENDERER_SPIN_GET_CLASS(obj)   (G_TYPE_INSTANCE_GET_CLASS ((obj), GTK_TYPE_CELL_RENDERER_SPIN, GtkCellRendererTextClass))
-						 
-typedef struct _GtkCellRendererSpin GtkCellRendererSpin;
-typedef struct _GtkCellRendererSpinClass GtkCellRendererSpinClass;
+
+typedef struct _GtkCellRendererSpin        GtkCellRendererSpin;
+typedef struct _GtkCellRendererSpinClass   GtkCellRendererSpinClass;
 typedef struct _GtkCellRendererSpinPrivate GtkCellRendererSpinPrivate;
 
 struct _GtkCellRendererSpin
