@@ -33,21 +33,20 @@ G_BEGIN_DECLS
 #define GTK_IS_FILE_CHOOSER_DIALOG_CLASS(klass)  (G_TYPE_CHECK_CLASS_TYPE ((klass), GTK_TYPE_FILE_CHOOSER_DIALOG))
 #define GTK_FILE_CHOOSER_DIALOG_GET_CLASS(obj)   (G_TYPE_INSTANCE_GET_CLASS ((obj), GTK_TYPE_FILE_CHOOSER_DIALOG, GtkFileChooserDialogClass))
 
-typedef struct _GtkFileChooserDialog      GtkFileChooserDialog;
-typedef struct _GtkFileChooserDialogClass GtkFileChooserDialogClass;
-
+typedef struct _GtkFileChooserDialog        GtkFileChooserDialog;
 typedef struct _GtkFileChooserDialogPrivate GtkFileChooserDialogPrivate;
-
-struct _GtkFileChooserDialogClass
-{
-  GtkDialogClass parent_class;
-};
+typedef struct _GtkFileChooserDialogClass   GtkFileChooserDialogClass;
 
 struct _GtkFileChooserDialog
 {
   GtkDialog parent_instance;
 
   GtkFileChooserDialogPrivate *priv;
+};
+
+struct _GtkFileChooserDialogClass
+{
+  GtkDialogClass parent_class;
 };
 
 GType      gtk_file_chooser_dialog_get_type         (void) G_GNUC_CONST;
