@@ -33,21 +33,20 @@ G_BEGIN_DECLS
 #define GTK_IS_FILE_CHOOSER_WIDGET_CLASS(klass)  (G_TYPE_CHECK_CLASS_TYPE ((klass), GTK_TYPE_FILE_CHOOSER_WIDGET))
 #define GTK_FILE_CHOOSER_WIDGET_GET_CLASS(obj)   (G_TYPE_INSTANCE_GET_CLASS ((obj), GTK_TYPE_FILE_CHOOSER_WIDGET, GtkFileChooserWidgetClass))
 
-typedef struct _GtkFileChooserWidget      GtkFileChooserWidget;
-typedef struct _GtkFileChooserWidgetClass GtkFileChooserWidgetClass;
-
+typedef struct _GtkFileChooserWidget        GtkFileChooserWidget;
 typedef struct _GtkFileChooserWidgetPrivate GtkFileChooserWidgetPrivate;
-
-struct _GtkFileChooserWidgetClass
-{
-  GtkVBoxClass parent_class;
-};
+typedef struct _GtkFileChooserWidgetClass   GtkFileChooserWidgetClass;
 
 struct _GtkFileChooserWidget
 {
   GtkVBox parent_instance;
 
   GtkFileChooserWidgetPrivate *priv;
+};
+
+struct _GtkFileChooserWidgetClass
+{
+  GtkVBoxClass parent_class;
 };
 
 GType      gtk_file_chooser_widget_get_type         (void) G_GNUC_CONST;
